<resources>
    <string name="app_name">Southern NH</string>
    <string name="manchester"> Manchester </string>
    <string name="bedford"> Bedford</string>
    <string name="merrimack"> Merrimack</string>
    <string name="hooksett">Hooksett</string>
    <string name="city_title">Citi Name in southern NH</string>
    <string name="city_description">Information About a city in Southern NH</string>
    <string name="nh_moto">Live Free or Die</string>
    <string name="cities">Cities - Towns</string>
    <string name="manchester_img_desc">Manchester, NH City Image Art</string>
    <string name="bedford_img_desc">Bedford NH Image Art</string>
    <string name="merrimack_img_desc">Merrimack, NH Image Art</string>
    <string name="hooksett_img_desc">Hooksett, NH Image Art</string>
    <string name="city_img_desc">A image of a city in Southern NH </string>
    <string name="section_img_desc">image for a particular section of the app</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="things_to_do">Things To Do</string>
    <string name="museums">Museums - Galleries</string>
    <string name="performing_arts">Performing Arts</string>
    <string name="library">Public Libraries</string>
    <string name="sport_country_clubs">Sports - Country Clubs</string>
    <string name="shopping">Shopping</string>
    <string name="dining">Dining</string>
    <string name="itinerary">Itinerary</string>
    <string name="transportation">Transportation</string>
    <string name="airport">Airport</string>
    <string name="mht_airport_title">Manchester•Boston Regional Airport (MHT)</string>
    <string name="mht_airport">Strategically situated in the heart of New England,
        Manchester-Boston Regional Airport is committed to:
        Providing world class aviation facilities and infrastructure;
        Providing safe, efficient, and convenient transportation.
    </string>
    <string name="mht_website">https://www.flymanchester.com</string>
    <string name="mht_address">1 Airport Road Manchester, NH 03103</string>
    <string name="plain_img">Image of a Plain taxi in an Airport</string>
    <string name="where_to_stay">Places to Stay</string>
    <string name="hotels">Hotels - B n B</string>
    <string name="parks">Public Parks</string>
    <string name="bedfordnhTitle">Bedford, NH</string>
    <string name="bedfordInfoText"><![CDATA[Bedford is known as an upscale bedroom community for those commuting to Manchester, Hooksett, Merrimack, and Boston. This is where Southern NH most affluent families, trust funds babies, & inheritance fortunes reside. Recently it has also gained favor as an outstanding location for businesses. The town is home to the legacy park a 70-acre facility that includes soccer, softball, and baseball fields; cross-country ski trails and tennis court among others. There is limited Public Transit (Bus) service from Manchester to Bedford, It is highly recommended to rent a car if you plan to visit Bedford whilst staying in Manchester.]]></string>
    <string name="hooksettTitle">Hooksett, NH</string>
    <string name="hooksettInfo">Brilliantly located between Manchester and Concord NH this town’s commercial district and the portion of northern Manchester blend together in a seamless bustle of retail operations, shopping centers, cinemas, restaurants, and lovely residential  neighborhoods.There is limited Public Transit (Bus) service from Manchester to   Hooksett, It is highly recommended to rent a car if you plan to visit Hooksett whilst staying in Manchester.</string>
    <string name="manchesterTitle">Manchester</string>
    <string name="manchesterInfoText"><![CDATA[Located in the heart of Northern New England, in south central New Hampshire, and along the Merrimack River. This is the 10th largest city in New England, it is within a 58 miles distance from Boston about an hour drive. Manchester provides a vibrant urban living and famed natural beauty. It is a destination in its own right. Manchester is the financial center of New Hampshire, home to the largest civic arena, and the hub for the state most cultural institutions. The downtown is home of the palace theater which attracts nationally known performers from across the country. The city boasts 900 acres of parks and numerous golf courses. The local cuisine reflects the divers tastes and ethnic origins of the population which includes classic New England fare. There is Adequate Public Transportation to get to or From M.H.T Manchester Boston Regional Airport, The Mall of New Hampshire for shopping, also Part of Hooksett, & Bedford. There are numerous entertainment options such as Theater & Plays, Concerts, Sports, Museums, & casual to fine dining.]]></string>
    <string name="merrimackTitle">Merrimack, NH</string>
    <string name="MerrimackInfoText"><![CDATA[This is a young and family oriented town with  some very well known national and international businesses. Merrimack is located between Manchester, & Bedford  along with three interchanges off the F, E. Everett Turnpike, makes it a convenient bridge between both communities There is no Public Transit (Bus) service from Manchester to Merrimack, It is highly recommended to rent a car if you plan to visit Merrimack whilst staying in Manchester.]]></string>
    <string name="diningTitle1">Bedford Village INN</string>
    <string name="diningAddress1">2 Olde Bedford Way, Bedford NH</string>
    <string name="diningSite1">http://www.bedfordvillageinn.com/dining/</string>
    <string name="diningDesc1">Restaurant</string>
    <string name="diningTitle2">Adored</string>
    <string name="diningAddr2">848 Elm Street, Manchester NH</string>
    <string name="diningSite2">http://www.adored.com</string>
    <string name="diningDesc2">Restaurant</string>
    <string name="diningTitle3">Cabonnay</string>
    <string name="diningAddr3">55 Bridge Street, Manchester NH</string>
    <string name="diningsite3">http://www.cabonnay.com</string>
    <string name="diningDesc3">Restaurant</string>
    <string name="diningTitle4"><![CDATA[A&E Coffee]]></string>
    <string name="diningAddr4">1000 Elm Street, Manchester NH</string>
    <string name="diningSite4">http://www.aeroastery.com</string>
    <string name="diningDesc4">Coffee Shop</string>
    <string name="diningTitle5">Dancing Lion Chocolate</string>
    <string name="diningAddr5">917 Elm Street, Manchester NH</string>
    <string name="diningSite5">http://www.dancinglionchocolate.com</string>
    <string name="diningDesc5">Bakery</string>
    <string name="diningTitle6">Stark Brewing Company</string>
    <string name="diningAddr6">500 Commercial Street, Manchester NH</string>
    <string name="diningSite6">http://www.starkbrewingcompany.com</string>
    <string name="diningDesc6">Brewery</string>
    <string name="hTitle1">Bedford Village Inn</string>
    <string name="hAddr1">2 Olde Bedford Way, Bedford NH</string>
    <string name="hsite1">www.bedfordvillageinn.com</string>
    <string name="hDesc1"><![CDATA[5 Stars - Hotel & Restaurant.]]></string>
    <string name="htitle2">Radisson Hotel of Manchester</string>
    <string name="hAddr2">700 Elm Street, Manchester NH</string>
    <string name="hSite2">www.radisson.com/manchester</string>
    <string name="hdesc2">4 Stars - Hotel</string>
    <string name="hTitle3">Hilton Garden Inn</string>
    <string name="hAddr3">101 South Commercial St, Manchester NH</string>
    <string name="hSite3">www.hgi-manchester.com</string>
    <string name="hDesc3"><![CDATA[4 Stars - Hotels & Restaurant.]]></string>
    <string name="hTitle4">Ash Street Inn</string>
    <string name="hAddr4">118 Ash Street Manchester, NH</string>
    <string name="hSite4">www.ashstreetinn.com</string>
    <string name="hDesc4">3 Stars - Bed and BreakFast</string>
    <string name="hTitle5">Comfort Inn</string>
    <string name="hAddr5">298 Queen City Avenue, Manchester NH</string>
    <string name="hsite5">www.comfortinnmht.com</string>
    <string name="hDesc5">3 Stars - Budget Hotel</string>
    <string name="hTitle6">Holiday Inn - Manchester Airport</string>
    <string name="hAddr6">2280 Brown avenue, Manchester NH</string>
    <string name="hSite6">www.holidayinn.com/manchesternh</string>
    <string name="hDesc6">3 Stars Hotel</string>
    <string name="mTitle1">Currier Museum of Art</string>
    <string name="mAddr1">150 Ash Street, Manchester NH</string>
    <string name="mSite1">www.currier.org</string>
    <string name="mDesc1">The Currier Museum of Art is an internationally renowned art museum located in downtown Manchester city center. The Currier features European and American paintings, decorative arts, photographs, and sculpture, including works by Picasso, Monet, O\'Keeffe, Wyeth, and LeWitt with exibitions, tours and programs year round.</string>
    <string name="mTitle2">Credit Union Museum</string>
    <string name="mAddr2">418-420 Notre Dame Avenue, Manchester NH</string>
    <string name="mSite2">www.acumuseum.org</string>
    <string name="mDesc2">Visit the birthplace of America\'s credit Union movement and find out what is was like to live in America during the great depression. The museum tells the human side of the credit union story.</string>
    <string name="mTitle3">Franco-American Center</string>
    <string name="mAddr3">100 Saint Anselm Drive, Davidson Hall, Manchester NH</string>
    <string name="msite3">www.facnh.com</string>
    <string name="mDesc3">This nonprofit cultural organization preserves the rich heritage of the French communities in Manchester through exhibits and a variety of cultural programs.</string>
    <string name="mTitle4">Milliard Museum</string>
    <string name="mAddr4">200 Bedford Street, Manchester NH</string>
    <string name="mSite4">www.manchesterhistoric.org</string>
    <string name="mDesc4">The Milliard museum offers visitors a unique view of manchester\'s history, from Native americans who settled on the Amoskeag Falls to the employees of Amoskeag manufacturing company to today\'s business and residents.</string>
    <string name="mTitle5">New Hampshire Institute of Politics</string>
    <string name="mAddr5">100 Saint Anselm Drive, Manchester NH</string>
    <string name="mSite5">www.nhiop.org</string>
    <string name="mDesc5"><![CDATA[Located on the campus of Saint Anselm College, the institute is housed in a 20,000-square-foot facility that contains an auditorium, television Station, research center, the NH Library, & the common Ground Cafe.]]></string>
    <string name="mTitle6">Zimmerman House by Frank lloyd Wright</string>
    <string name="mAddr6">200 Myrtle Way, Manchester NH</string>
    <string name="mSite6">www.currier.org</string>
    <string name="mDesc6">The Zimmerman house was designed in 1950 by American architect Frank Lloyd Wright and is owns by the Currier Museum of Art,. It is the only house open to the public in New England. Reservation can be made by visiting our website.</string>
    <string name="mTitle7">NH Institute of Art campus Galleries</string>
    <string name="mAddr7">148 Concord Street, Manchester NH</string>
    <string name="mSite7">www.nhia.edu</string>
    <string name="mDesc7">The New Hampshire Institute of art operates three gallery spaces located on campus that exhibit student, professional and community works throughout the year.</string>
    <string name="mTitle8">Art 3 Gallery</string>
    <string name="mAddr8">44 West Brook Street, Manchester NH</string>
    <string name="mSite8">www.art3gallery.com</string>
    <string name="mDesc8">Located in a restored tonwhouse in the historic Milliard district of Manchester, the gallery includes one of the largest collections of art by New Hampshire, New England, national, and international.</string>
    <string name="mTitle9">Studio 550 Art Center</string>
</resources>